@@ -63,6 +63,8 @@ Release 0.2.0 - unreleased
 
   IMPROVEMENTS
 
+    TAJO-310: Make the DataLocation class as a separate class and move it to the tajo-core-storage package. (jihoon)
+
     TAJO-311: Improve Hive dependency. (jaehwa)
 
     TAJO-309: Remove unused fields in FileFragment. (jihoon)
